Improved issues presentation. Removed table lines to display more actual data on screen.

--- a/template/issues.tmpl
+++ b/template/issues.tmpl
@@ -1,5 +1,5 @@
 {% filter table(['ID', 'TRACKER', 'STATUS', 'PRIORITY', 'ASSIGNEE', 'SUBJECT']) -%}
 {% for issue in issues -%}
-{{issue.id}}|{{issue.tracker.name}}|{{issue.status.name}}|{{issue.priority.name}}|{{issue.assigned_to.name|default('(not assigned)')}}|{{issue.subject}}
+#{{issue.id}}|{{issue.tracker.name}}|{{issue.status.name}}|{{issue.priority.name}}|{{issue.assigned_to.name|default('(not assigned)')}}|{{issue.subject}}
 {% endfor -%}
 {% endfilter -%}
