Improved issue template (added default value when no description set)

--- a/template/issue.tmpl
+++ b/template/issue.tmpl
@@ -7,4 +7,4 @@ Added by {{author.name}} {{created_on|ago}}.{% if updated_on %} Updated {{update
 {% endfilter %}
 
 {% filter heading %}DESCRIPTION{% endfilter %}
-{{description}}
+{{description|default('(no description set)')}}
