Added new column 'id' to project list. ID is required when creating new sub-projects.

--- a/template/projects.tmpl
+++ b/template/projects.tmpl
@@ -1,5 +1,5 @@
-{% filter table(['NAME', 'IDENTIFIER']) -%}
+{% filter table(['ID', 'NAME', 'IDENTIFIER']) -%}
 {% for project in projects -%}
-{{project.name}}|{{project.identifier}}
+{{project.id}}|{{project.name}}|{{project.identifier}}
 {% endfor -%}
 {% endfilter -%}
