--- a/template/issue.tmpl
+++ b/template/issue.tmpl
@@ -1,9 +1,12 @@
 {% filter heading %}{{tracker.name}} #{{id}}{% endfilter %}
 {{subject}}
-Added by {{author.name}} {{created_on|ago}}.{% if updated_on %} Updated {{updated_on|ago}}.{% endif %}
+Added by {% filter bold %}{{author.name}}{% endfilter %} {{created_on|ago}}.{% if updated_on %} Updated {{updated_on|ago}}.{% endif %}
 
-{% filter table(['STATUS', 'PRIORITY', 'ASSIGNEE']) -%}
-{{status.name}}|{{priority.name}}|{{assigned_to.name|default('(not assigned)')}}
+{% filter table -%}
+{% filter bold %}Status:{% endfilter %}|{{status.name}}|{% filter bold %}Start date:{% endfilter %}|{{start_date|default('--')}}
+{% filter bold %}Priority:{% endfilter %}|{{priority.name}}|{% filter bold %}Due date:{% endfilter %}|{{due_date|default('--')}}
+{% filter bold %}Assignee:{% endfilter %}|{{assigned_to.name|default('(not assigned)')}}|{% filter bold %}Done:{% endfilter %}|{{done_ratio}}%
+{% filter bold %}Estimated time:{% endfilter %}|{{estimated_hours|default('--')}}{% if estimated_hours %} hours{% endif %}|{% filter bold %}Spent time:{% endfilter %}|{{spent_hours}} hour(s)
 {% endfilter %}
 
 {% filter heading %}DESCRIPTION{% endfilter %}
